# repitframework

./: .gitignore  CONTRIBUTING.md  Dockerfile  GTvsPGTanalysis.ipynb  LICENSE.md  README.md  config.py  environment.yml  notes.txt  optuna_training.py  pyproject.toml  runner.py  runner_SingleNetwork.py  runner_test.py  setup.py  test.ipynb  utils.py
ModelSelector/FVMN/: model.py
OpenFOAM/: utils.py
Solvers/natural_convection/1/: T  U  p  p_rgh  phi  rho
Solvers/natural_convection/1/uniform/: time
Solvers/natural_convection/18/: U
Solvers/natural_convection/system/: controlDict
random/: CylinderFNO.ipynb  nature.ipynb  refactoring.ipynb  train_cylinderFNO.py  vis_3d.py
repitframework/: config.py  foamResetFramework.py  model_selector.py  plot_utils.py  predictor.py  trainer.py  utils.py
repitframework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repitframework/DataLoader/: loader.py
repitframework/Dataset/: FNO2D.py  baseline.py  dataset.py  fvmn.py  test_fvmn.py  utils.py
repitframework/Metrics/: ResidualNaturalConvection.py  __init__.py
repitframework/Models/: __init__.py
repitframework/Models/FVMN/: fvmn.py
repitframework/Models/NeuralOperator/: FNO1D.py  FNO2D.py  FVFNO1D.py  FVFNO2D.py  __init__.py
repitframework/OpenFOAM/: numpyToFoam.py  utils.py
repitframework/OpenFOAM/numpyToFoam/: numpyToFoam.C  test.py
repitframework/OpenFOAM/numpyToFoam/Make/: files  options
repitframework/Solvers/natural_convection/19/: data.txt
repitframework/Solvers/natural_convection/system/: controlDict  fvSolution
tests/: test_OpenFOAM.py
(+33 files in other folders)
